# UnifiedTaskProgramming

./: .gitignore
apps/: Makefile  UI-DT-GEMM-9816639.out  UI-DT-GEMM-9956549.out  UI-DT-GEMM-9956551.out  UI-DT-GEMM-9956555.out  UI-DT-GEMM-9956726.out  UI-DT-GEMM-9956731.out  afshin.db  apps.cbp  apps.cbp.mak  apps.depend  apps.layout  cu_run.sh  gemm_sg_blas_1024_128.out.1.0  gemm_sg_blas_1024_16.out  gemm_sg_blas_1024_16.out.1.0  gemm_sg_blas_1024_32.out  gemm_sg_blas_1024_32.out.1.0  gemm_sg_blas_1024_4.out.1.0  gemm_sg_blas_1024_64.out  gemm_sg_blas_1024_64.out.1.0  gemm_sg_blas_1024_8.out.1.0  gemm_sg_blas_2048_128.out.1.0  gemm_sg_blas_2048_16.out  gemm_sg_blas_2048_16.out.1.0  gemm_sg_blas_2048_32.out  gemm_sg_blas_2048_32.out.1.0  gemm_sg_blas_2048_64.out  gemm_sg_blas_2048_64.out.1.0  gemm_sg_blas_2048_8.out.1.0  gemm_sg_blas_4096_128.out.1.0  gemm_sg_blas_4096_16.out  gemm_sg_blas_4096_16.out.1.0  gemm_sg_blas_4096_256.out.1.0  gemm_sg_blas_4096_32.out  gemm_sg_blas_4096_32.out.1.0  gemm_sg_blas_4096_64.out  gemm_sg_blas_4096_64.out.1.0  gemm_sg_blas_8192_128.out.1.0  gemm_sg_blas_8192_16.out  (+12 more)
cpu_blas_scheduler/: CMakeLists.txt  Makefile  cpu_blas_scheduler.cbp  cpu_blas_scheduler.cbp~  cpu_blas_scheduler.depend  cpu_blas_scheduler.layout
cpu_blas_scheduler/include/: CPUBLAS.hpp  task_blas.hpp
cpu_blas_scheduler/src/: CPUBLAS.cpp  task_blas.cpp
cuBLAS_scheduler/: Makefile  Makefile_cpp
dispatcher/: CMakeLists.txt  Makefile  Makefile_Cloud  Makefile_hpc  dispatcher.cbp  dispatcher.cbp~  dispatcher.depend  dispatcher.layout  main.cpp
dispatcher/include/: Dispatcher.hpp  EchoScheduler.hpp  GData.hpp  GHandle.hpp  GLog.hpp  GOperation.hpp  GPartitioner.hpp  GTask.hpp  IScheduler.hpp  MQWrapper.hpp  SGWrapper.hpp  memory_manager.hpp  unified_tasks.hpp  utp_basic.hpp
dispatcher/src/: Dispatcher.cpp  GData.cpp  GHandle.cpp  GLog.cpp  GOperation.cpp  GPartitioner.cpp  GTask.cpp  IScheduler.cpp  MQWrapper.cpp  zMQWrapper.cpp
dispatcher/test_MQ/: events.ser  test_MQ.cbp  test_MQ.depend  test_MQ.layout
dispatcher/ugemm/: ugemm.cbp  ugemm.depend  ugemm.layout
doc/: config
dt_scheduler/: CMakeLists.txt  Makefile  README.md  dt_scheduler.cbp  dt_scheduler.depend
dt_scheduler/include/: DTWrapper.hpp
dt_scheduler/src/: DTWrapper.cpp
ductteip/: Makefile  a.txt  ductteip.cbp  ductteip.depend  ductteip.layout
lupp/: Makefile  m  main.cpp  mc  run.sh
mq_scheduler/: Makefile  Makefile_HPC  mq_profile.cpp  run.sh  run_Cloud.sh  run_HPC.sh  send.cpp  ugemm_app.cpp  ugemm_server.cpp
sg_gemm/: gemm_test.sh  main.cpp  sg_gemm.cbp
sg_scheduler/: CMakeLists.txt  Makefile  sg_scheduler.cbp  sg_scheduler.depend  sg_scheduler.layout
sg_scheduler/include/: SGWrapper.hpp
sg_scheduler/src/: SGWrapper.cpp
static_binding/: .__afs541F  .nfs000000006121f84500000637  .nfs0000000090d36670000008ef  .nfs00000000c4ca2d2300000634  .nfs00000000e8e2fc9900000635  .nfs00000000f9c11241000008ee  Makefile  Makefile.base  Makefile.v0  ScriptsCopy.sh  bo  bo_keb  bo_release  bo_release_keb  bo_run.sh  clean  db  db_keb  db_release  db_release_keb  dsb  dsb_keb  dsb_out_48_4_3_2_1_2.txt.1.0  dsb_out_48_4_3_2_1_2.txt.1.1  dsb_release  dsb_release_keb  dspub_keb  dspub_release_keb  dt_export_file-00.txt  dt_export_file-01.txt  (+26 more)
ublas/: CMakeLists.txt  Makefile  Makefile_HPC
ublas/include/: unified_add.hpp  unified_blas.hpp  unified_copy.hpp  unified_dot.hpp  unified_trsm.hpp
ublas/src/: unified_add.cpp  unified_copy.cpp  unified_dot.cpp  unified_gemm.cpp  unified_trsm.cpp
ublas/unit_tests/: Makefile  run_tests.sh  test_ugemm.cpp  ugemm1.cpp
ublas/unit_tests/src/: udot.cpp
ublas/unit_tests/test/: .nfs000000004e06c3340000000b  .nfs00000000ea9e999d0000000c
(+159 files in other folders)
